# sweet-hill

./: Cargo.toml  Makefile
assets/maps/volta_i/: volta_i.map
assets/models/guns/m4a1/: m4a1.glb  m4a1.gltf
assets/shaders/: post_processing.wgsl
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs  perceptual.rs
crates/gameplay/core_gameplay/: Cargo.toml
crates/gameplay/core_gameplay/src/: animation.rs  level.rs  lib.rs
crates/gameplay/core_gameplay/src/crosshair/: mod.rs
crates/gameplay/core_gameplay/src/flashlight/: mod.rs  systems.rs
crates/gameplay/core_gameplay/src/npc/: ai.rs  animation.rs  assets.rs  mod.rs  sound.rs
crates/gameplay/core_gameplay/src/player/: animation.rs  assets.rs  camera.rs  input.rs  mod.rs  movement_sound.rs  navmesh_position.rs  states.rs
crates/gameplay/core_gameplay/src/player/dialogue/: mod.rs  ui.rs
crates/gameplay/core_gameplay/src/player/pickup/: collision.rs  sound.rs  state.rs  ui.rs
crates/gameplay/enemies/: Cargo.toml
crates/gameplay/enemies/src/: lib.rs  states.rs
crates/gameplay/enemies/src/die_controller/: domain.rs  handlers.rs  mod.rs  systems.rs
crates/gameplay/enemies/src/hit_detection/: events_handlers.rs  mod.rs
crates/gameplay/gameplay_input/: Cargo.toml
crates/gameplay/gameplay_input/src/: configure.rs  inputs.rs  lib.rs  player_input_actions_mapping.rs
crates/gameplay/gun/: Cargo.toml  README.md
crates/gameplay/gun/src/: inputs.rs  lib.rs  states.rs
crates/gameplay/gun/src/aims/: handlers.rs  mod.rs  utils.rs
crates/gameplay/gun/src/aims/aim_configurations/: components.rs  mod.rs
crates/gameplay/gun/src/aims/aim_up/: handlers.rs  mod.rs
crates/gameplay/gun/src/aims/zoom/: handlers.rs  mod.rs
crates/gameplay/gun/src/configuration/: README.md  gun_bag.rs  gun_components.rs  mod.rs
crates/gameplay/gun/src/configuration/guns_definitions/: mod.rs
crates/gameplay/gun/src/firing/: events.rs  gun_can_shoot.rs  mod.rs  states.rs  systems.rs
crates/gameplay/gun/src/firing/configurations/: components.rs
crates/gameplay/gun/src/firing/firing_types/: bullet.rs  domain.rs  mod.rs
crates/gameplay/gun/src/gun_controller/: configure.rs  domain.rs  gun_can_shoot.rs  handle_input.rs  mod.rs  systems.rs  ui.rs
crates/gameplay/gun/src/models/: gun_mark_spawn.rs  mod.rs
crates/gameplay/gun/src/models/gun_models/: mod.rs
crates/gameplay/gun/src/recoil/: mod.rs  systems.rs
crates/gameplay/gun/src/recoil/configurations/: components.rs
crates/gameplay/gun/src/reload/: README.md  domain.rs  mod.rs  systems.rs
crates/gameplay/gun/src/reload/configurations/: components.rs
crates/gameplay/gun/src/reload/sounds/: mod.rs  reload_soud.rs
crates/gameplay/gun/src/replace_guns/: README.md  events.rs  handlers.rs  mod.rs  system.rs
crates/gameplay/gun/src/sound/: asset_loader.rs  events.rs  mod.rs
crates/gameplay/gun/src/switch_guns/: README.md  mod.rs  switch_active_gun.rs
crates/gameplay/gun/src/ui/: README.md  ammo_ui.rs  mod.rs
crates/gameplay/inventory/: README.md
crates/gameplay/inventory/inventory/: Cargo.toml
crates/gameplay/inventory/inventory/src/: lib.rs
crates/gameplay/inventory/inventory/src/collect/: app.rs  collect_action.rs  collectable.rs  (+3 more)
crates/gameplay/inventory/inventory_core/: Cargo.toml
crates/gameplay/inventory/inventory_core/src/: lib.rs
crates/gameplay/inventory/inventory_macros/: Cargo.toml
crates/gameplay/inventory/inventory_macros/src/: lib.rs
crates/gateways/interaction_gateway/: Cargo.toml
crates/gateways/interaction_gateway/src/: detect_can_interact.rs  ensurements.rs  interact.rs  lib.rs  ui.rs
crates/gateways/interaction_gateway/src/ui/: can_interact_ui.rs  interacting_ui.rs  mod.rs
crates/gateways/scenario/: Cargo.toml
crates/mechanics/interaction/: README.md
crates/mechanics/interaction/interaction/: Cargo.toml
crates/mechanics/interaction/interaction/src/: lib.rs
crates/mechanics/inventory/: Cargo.toml
crates/mechanics/inventory/src/: lib.rs
crates/mechanics/inventory/src/active_items/: mod.rs  single_active_item.rs
crates/mechanics/inventory/src/bag/: components.rs
crates/mechanics/inventory/src/switch_items/: mod.rs
crates/mechanics/inventory/src/take/: collect.rs  components.rs  handlers.rs  mod.rs
crates/states/: Cargo.toml
crates/states/src/: hittable.rs  lib.rs  player.rs  screens.rs  utils.rs  world.rs
crates/states/src/guns/: marks.rs
crates/states/src/interaction/: mod.rs
crates/states/src/inventory/: active_item.rs  items.rs  mod.rs
crates/states/src/player_states/: camera.rs  constants.rs  mod.rs  settings.rs
crates/utils/: Cargo.toml
crates/utils/src/: animation.rs  asset_processing.rs  asset_tracking.rs  hdr.rs  lib.rs  light_utils.rs  post_process.rs  shader_compilation.rs  ui_camera.rs  world.rs
crates/utils/src/calculations/: mod.rs  random_circle.rs
crates/utils/src/effects/: camera_sway.rs  mod.rs
foxtrot/: Cargo.toml  build.rs
foxtrot/.cargo/: config_release.toml
foxtrot/src/: main.rs  post_process.rs  shader_compilation.rs
foxtrot/src/dev_tools/: debug_ui.rs  mod.rs
foxtrot/src/gameplay/: level.rs  mod.rs
foxtrot/src/gameplay/crosshair/: assets.rs  mod.rs
foxtrot/src/gameplay/flashlight/: mod.rs  states.rs  systems.rs
foxtrot/src/gameplay/npc/: ai.rs  animation.rs  assets.rs  mod.rs  sound.rs
foxtrot/src/gameplay/player/: animation.rs  assets.rs  camera.rs  input.rs  mod.rs  movement_sound.rs
foxtrot/src/gameplay/player/dialogue/: mod.rs  ui.rs
foxtrot/src/gameplay/player/pickup/: collision.rs  mod.rs  sound.rs  ui.rs
foxtrot/src/menus/: credits.rs  main.rs  pause.rs  settings.rs
foxtrot/src/props/: effects.rs  generic.rs  mod.rs  setup.rs
foxtrot/src/props/brush_entity/: light_window.rs
foxtrot/src/props/specific/: burning_logs.rs  chair.rs  crate_.rs  lamp_plain.rs  lamp_shaded.rs  lamp_sitting.rs  lamp_wall_electric.rs
foxtrot/src/screens/: gameplay.rs  mod.rs  splash.rs  title.rs
foxtrot/src/screens/loading/: mod.rs  preload_assets.rs  shader_compilation.rs  spawn_level.rs
foxtrot/src/theme/: interaction.rs
scripts/: bake_assets.py
(+22 files in other folders)
