[package]
name = "foxtrot"
description = "A 3D reference project and tech demo for the Bevy Engine."
license = "MIT OR Apache-2.0 OR CC0-1.0"
authors = ["Jan Hohenheim <jan@hohenheim.ch>"]
version = "0.1.0"
edition = "2024"
exclude = ["assets"]
readme = "readme.md"
keywords = ["bevy", "demo", "3d", "game"]
repository = "https://github.com/janhohenheim/foxtrot"
categories = ["game-development"]
homepage = "https://janhohenheim.itch.io/foxtrot"

[dependencies]
bevy = { workspace = true, features = [
    "gltf_animation",
    "bevy_asset",
    "bevy_anti_alias",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "mesh_picking",
    "bevy_pbr",
    "bevy_picking",
    "bevy_post_process",
    "bevy_render",
    "bevy_gizmos_render",
    "bevy_scene",
    "bevy_sprite",
    "sprite_picking",
    "bevy_state",
    "bevy_text",
    "bevy_ui_render",
    "ui_picking",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "jpeg",
    "tga",
    "ktx2",
    "png",
    "wayland",
    "zstd_rust",
    "reflect_auto_register"
] }
bevy_enhanced_input = { workspace = true }

# physics
avian3d ={ workspace = true }
avian_pickup ={ workspace = true }

# character controller
bevy_ahoy ={ workspace = true }

# navigation
bevy_landmass ={ workspace = true }
landmass_rerecast ={ workspace = true }
bevy_rerecast = { workspace = true, default-features = false }
avian_rerecast ={ workspace = true }

# Level editor
bevy_trenchbroom ={ workspace = true }
bevy_trenchbroom_avian ={ workspace = true }

# dialogue
bevy_yarnspinner ={ workspace = true }
bevy_yarnspinner_example_dialogue_view ={ workspace = true }

bevy_shuffle_bag ={ workspace = true }
bevy-inspector-egui = { workspace = true, optional = true }
bevy_fix_cursor_unlock_web ={ workspace = true }
bevy_framepace ={ workspace = true }
bevy_seedling ={ workspace = true }

# Keep this in sync with Bevy
rand ={ workspace = true }

# Compile low-severity logs out of web builds for performance.
tracing = { workspace = true, features = [
    "max_level_debug",
    "release_max_level_warn",
] }
getrandom = { workspace = true, default-features = false, features = [
    "wasm_js",
] }

bitflags ={ workspace = true }
anyhow ={ workspace = true }
regex ={ workspace = true }
bincode ={ workspace = true }
# Latest version that works with bevy_seedling
wasm-bindgen = { workspace = true, optional = true }

bevy_hanabi = { workspace = true, default-features = false, features = [
    "3d",
    "gpu_tests",
] }
states = { version = "0.1.0", path = "../crates/states" }
third_party = { version = "0.1.0", path = "../crates/third_party" }
utils = { version = "0.1.0", path = "../crates/utils" }
audio = { version = "0.1.0", path = "../crates/audio" }
core_gameplay = { version = "0.1.0", path = "../crates/gameplay/core_gameplay" }
gun = { version = "0.1.0", path = "../crates/gameplay/gun" }
gameplay_input = { version = "0.1.0", path = "../crates/gameplay/gameplay_input" }

[features]
default = [
    # Default to a native dev build.
    "dev_native",
]
native = []
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    # Improve error messages coming from Bevy
    "bevy/track_location",
    "dep:bevy-inspector-egui",
    "avian3d/diagnostic_ui",
    "bevy_rerecast/debug_plugin",
    "bevy_rerecast/editor_integration",
]
dev_native = [
    "dev",
    "native",
    "bevy/bevy_remote",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
    "bevy_rerecast/editor_integration",
]
web = ["bevy/webgpu", "bevy_seedling/web_audio", "dep:wasm-bindgen"]
release = []

[package.metadata.bevy_cli]
default-features = false

[package.metadata.bevy_cli.native]
features = ["native"]

[package.metadata.bevy_cli.native.dev]
features = ["dev_native"]

[package.metadata.bevy_cli.native.release]
features = ["release"]

[package.metadata.bevy_cli.web]
features = ["web"]

[package.metadata.bevy_cli.web.dev]
features = ["dev"]

[package.metadata.bevy_cli.web.release]
features = ["release"]

[package.metadata.bevy_cli.unstable]
web-multi-threading = true

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"


# Compile with Performance Optimizations:
# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
# [profile.dev]
# opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
# [profile.dev.package."*"]
# opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
# [profile.release.package.wgpu-types]
# debug-assertions = false

# [patch.crates-io]
# # Not released yet
# bevy_framepace = { git = "https://github.com/aevyrie/bevy_framepace" }
# # Avian 0.6 not released yet
# bevy_trenchbroom = { git = "https://github.com/janhohenheim/bevy_trenchbroom", branch = "avian-0.6" }
# bevy_trenchbroom_avian = { git = "https://github.com/janhohenheim/bevy_trenchbroom", branch = "avian-0.6" }
