[package]
name = "core_gameplay"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = [
    "gltf_animation",
    "bevy_asset",
    "bevy_anti_alias",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "mesh_picking",
    "bevy_pbr",
    "bevy_picking",
    "bevy_post_process",
    "bevy_render",
    "bevy_gizmos_render",
    "bevy_scene",
    "bevy_sprite",
    "sprite_picking",
    "bevy_state",
    "bevy_text",
    "bevy_ui_render",
    "ui_picking",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "jpeg",
    "tga",
    "ktx2",
    "png",
    "wayland",
    "zstd_rust",
    "reflect_auto_register"
] }
bevy_landmass = { workspace = true }
bevy_rerecast = { workspace = true, default-features = false }
bevy_seedling = { workspace = true }
avian3d = { workspace = true }
bevy_ahoy =  { workspace = true }
landmass_rerecast = { workspace = true }
bevy_trenchbroom = { workspace = true }
bevy_trenchbroom_avian = { workspace = true }
bevy_enhanced_input = { workspace = true }
avian_pickup = { workspace = true }
bevy_shuffle_bag = { workspace = true }
rand =  { workspace = true }
bevy_yarnspinner = { workspace = true }
bevy_yarnspinner_example_dialogue_view = { workspace = true }
states = { version = "0.1.0", path = "../../states" }
utils = { version = "0.1.0", path = "../../utils" }
third_party = { version = "0.1.0", path = "../../third_party" }
audio = { version = "0.1.0", path = "../../audio" }
